# plasma-workspace

./: CMakeLists.txt
applets/kicker/plugin/: rootmodel.cpp
applets/notifications/package/: metadata.desktop  metadata.json
applets/panelspacer/plugin/: panelspacer.cpp
kcms/: CMakeLists.txt
kcms/colors/: CMakeLists.txt  colors.cpp  colors.h  colorsapplicator.cpp  colorsapplicator.h  colorskcmtool.cpp  colorsmodel.cpp  colorsmodel.h
kcms/colors/editor/: scmeditoroptions.cpp  scmeditoroptions.ui
kcms/colors/package/contents/ui/: main.qml
kcms/desktoplayout/: CMakeLists.txt  desktoplayoutdata.cpp  desktoplayoutdata.h  desktoplayoutsettings.kcfg  desktoplayoutsettings.kcfgc  dltool.cpp  kcm.cpp  kcm.h  kcm_desktoplayout.desktop  kcmmain.cpp
kcms/desktoplayout/package/: metadata.desktop
kcms/desktoplayout/package/contents/ui/: main.qml
kcms/lookandfeel/: CMakeLists.txt  dltool.cpp  kcm.cpp  kcm.h  lnftool.cpp  lookandfeelmanager.cpp  lookandfeelmanager.h  lookandfeelsettings.kcfg  qtstyletool.cpp  toolshared.cpp  toolshared.h
po/ar/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/bs/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/ca/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/ca@valencia/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/cs/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/da/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/de/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/el/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/en_GB/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/es/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/et/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/eu/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/fi/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/fr/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/gl/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/he/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/hu/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/ia/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/id/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/it/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/ja/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/ko/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/lt/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/ml/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/nb/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/nds/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/nl/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/nn/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/pa/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/pl/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/pt/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/pt_BR/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/ro/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/ru/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/sk/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/sl/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/sr/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/sv/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/tg/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/tr/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/uk/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/zh_CN/: kcm_desktoplayout.po  kcm_lookandfeel.po
po/zh_TW/: kcm_desktoplayout.po  kcm_lookandfeel.po
(+5 files in other folders)
